[gd_scene load_steps=10 format=3 uid="uid://ddjx10yf3vpwp"]

[ext_resource type="Script" path="res://Actors/Enemies/Enemy.gd" id="1_m40ir"]
[ext_resource type="PackedScene" uid="uid://cvygsfnqhifvw" path="res://Actors/Enemies/CutoutCharacter.tscn" id="1_x6qxr"]
[ext_resource type="PackedScene" uid="uid://c70xqlwusyym5" path="res://Objects/HurtBox/hurt_box_area_2d.tscn" id="2_011yi"]
[ext_resource type="PackedScene" uid="uid://b6hkhjgi4n5ia" path="res://Objects/HitBox/HitBoxArea2D.tscn" id="3_mu37h"]
[ext_resource type="PackedScene" uid="uid://b4xkbq5kuu26r" path="res://UI/UIHealthBar/UIHealthBar.tscn" id="5_runwb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lkbui"]
radius = 35.0

[sub_resource type="Animation" id="Animation_hq6jk"]
resource_name = "disappear"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_646wq"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBoxArea2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ug8nw"]
_data = {
"disappear": SubResource("Animation_hq6jk"),
"spawn": SubResource("Animation_646wq")
}

[node name="Enemy" type="PathFollow2D"]
loop = false
script = ExtResource("1_m40ir")

[node name="CutoutCharacter" parent="." instance=ExtResource("1_x6qxr")]

[node name="HurtBoxArea2D" parent="." instance=ExtResource("2_011yi")]
team = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea2D"]
shape = SubResource("CircleShape2D_lkbui")

[node name="HitBoxArea2D" parent="." instance=ExtResource("3_mu37h")]
team = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
shape = SubResource("CircleShape2D_lkbui")

[node name="VisibleArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibleArea2D"]
shape = SubResource("CircleShape2D_lkbui")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_ug8nw")
}

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../UIPivot")
update_rotation = false
update_scale = false

[node name="UIPivot" type="Node2D" parent="."]

[node name="HealthBar" parent="UIPivot" instance=ExtResource("5_runwb")]
offset_left = -86.0
offset_top = -72.0
offset_right = 86.0
offset_bottom = -47.0

[connection signal="hit_landed" from="HurtBoxArea2D" to="." method="_on_hurt_box_area_2d_hit_landed"]
